--- a/app/src/main/res/layout/android_test.xml
+++ b/app/src/main/res/layout/android_test.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.androidtest.mshzhb.androidtest.MainActivity">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="368dp"
-        android:layout_height="502dp"
+        android:layout_height="495dp"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="4dp">
+        tools:layout_editor_absoluteY="8dp">
+
 
         <TextView
             android:id="@+id/textViewPrime"
@@ -21,12 +21,6 @@
             tools:layout_editor_absoluteX="140dp"
             tools:layout_editor_absoluteY="33dp" />
 
-        <SeekBar
-            style="@style/Widget.AppCompat.SeekBar.Discrete"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:max="10000000"
-            android:progress="2" />
 
         <Button
             android:id="@+id/buttonPrime"
@@ -35,6 +29,6 @@
             android:text="Prime Test"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="28dp" />
-    </LinearLayout>
 
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
