--- a/app/src/main/res/layout/android_test.xml
+++ b/app/src/main/res/layout/android_test.xml
@@ -5,62 +5,69 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-
-        <TextView
-            android:id="@+id/textViewPrime"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="wait for test result"
-            tools:layout_editor_absoluteX="140dp"
-            tools:layout_editor_absoluteY="33dp" />
+            android:orientation="vertical"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="8dp">
 
 
-        <Button
-            android:id="@+id/buttonPrime"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Prime Test"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="28dp" />
+            <TextView
+                android:id="@+id/textViewPrime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="wait for test result"
+                tools:layout_editor_absoluteX="140dp"
+                tools:layout_editor_absoluteY="33dp" />
 
-        <TextView
-            android:id="@+id/textViewSum"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="wait for test result"
-            tools:layout_editor_absoluteX="140dp"
-            tools:layout_editor_absoluteY="33dp" />
 
-        <Button
-            android:id="@+id/buttonSum"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Sum Test"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="28dp" />
+            <Button
+                android:id="@+id/buttonPrime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Prime Test"
+                tools:layout_editor_absoluteX="16dp"
+                tools:layout_editor_absoluteY="28dp" />
 
-        <TextView
-            android:id="@+id/textViewPi"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="wait for test result"
-            tools:layout_editor_absoluteX="140dp"
-            tools:layout_editor_absoluteY="33dp" />
+            <TextView
+                android:id="@+id/textViewSum"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="wait for test result"
+                tools:layout_editor_absoluteX="140dp"
+                tools:layout_editor_absoluteY="33dp" />
 
-        <Button
-            android:id="@+id/buttonPi"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Pi Test"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="28dp" />
+            <Button
+                android:id="@+id/buttonSum"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Sum Test"
+                tools:layout_editor_absoluteX="16dp"
+                tools:layout_editor_absoluteY="28dp" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/textViewPi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="wait for test result"
+                tools:layout_editor_absoluteX="140dp"
+                tools:layout_editor_absoluteY="33dp" />
+
+            <Button
+                android:id="@+id/buttonPi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Pi Test"
+                tools:layout_editor_absoluteX="16dp"
+                tools:layout_editor_absoluteY="28dp" />
+
+        </LinearLayout>
+
+    </ScrollView>
+
 </android.support.constraint.ConstraintLayout>
